변경사항메모

--- a/1108.qmd
+++ b/1108.qmd
@@ -1,3 +1,60 @@
 ---
 title: "1108"
 ---
+
+# 11. 08. Decoding Language
+
+![](images/image-361428368.png)
+
+-   도덕기반
+
+    1\) Care
+
+    2\) Fairness
+
+    3\) Liberty : 자유
+
+    4\) Loyalty : 충성도
+
+    5\) Authority : 권한
+
+    6\) Sanctity : 거룩함
+
+-   의견은 대립되더라도, 비슷한 도덕기반을 사용할 수 있음. 관점이 크게 다른 것 같지만 그렇지 않다!
+
+    -   양 쪽의 의견을 다 들어봐라. 한 입장에만 치우치지 말고!
+
+# Lesson 3: Get Curious
+
+-   탐험가적 마음가짐을 통해 논쟁을 이해하고 상호작용할 수 있음!
+
+### Warrior Mindset 
+
+-   내 말이 맞다고 생각해, 싸움꾼의 마인드로 이기고 지고 밖에 없음. 이기는 것만 있고 듣는 것은 하지 않음.
+
+### Warriors Lose
+
+-   이기려 하는 것? 멍청한거다!
+
+    -   이기는 것이 기분은 좋겠지만, 싸움꾼 마인드로 대화하면 상대는 위협받고 모욕적인 기분을 느껴 방어 기제를 펼칠 것임. 그리고 그 사람과의 관계는 손상되는 것. 논쟁에서 이기는 것은 많은 것을 잃게 만든다.
+
+    -   그런데도 우리는 왜 싸움꾼의 마인드로 대화하나?
+
+### Being Wrong
+
+-   우리가 틀렸다는 것이 싫어. 우린 종종 틀리는데, 우리가 인지를 못하는 것임.
+
+### The Illusion of Explanatory Depth
+
+-   아마 대부분 사람이 대략적으로 알고 있지 세세하게 알고 있지 않음.
+
+### Embracing Not Knowing  내가 잘 모르고 있음을 받아들여라
+
+-   실제로 잘 알진 못하지만, 쟁점에 대해 강한 느낌이 있음... ㅇㅇ! 당연하지! 알고 있음! 근데 설명해바! 하면 음 ,, 먼가 표현은 못 하겠는데.. 이런 맥락.
+
+### Intellectual Humility 
+
+-   내가 알고 있는 게 한정적이고 내가 틀림을 인정하는 것\
+    = 지적겸손.
+
+-   우리가 틀린 것을 받아들이는 것이 삶의 일부이며 타인의 비판을 받아들일 줄 알아야함. 틀렸다는 것은 성장의 기회.
