--- a/1108.qmd
+++ b/1108.qmd
@@ -75,7 +75,7 @@ title: "1108"
 
 -   Belief Updating = 생각을 / 신념을 업데이트!
 
-## Changing Your Mind 
+## Changing Your Mind
 
 -   내 신념을 업데이트 할 수 있는 마음가짐을 가지고 있는 것이 중요함.
 
@@ -91,7 +91,7 @@ title: "1108"
 
     -   남을 판단하고 공격하는 질문은 하지 마라! 넌 잘 몰라 이런 뉘앙스. 조언식의 질문.
 
-## Constructive Questions 
+## Constructive Questions
 
 -   **Are Genuinely Curious: 니가 정말 궁금해하는 거냐**
 
@@ -200,3 +200,51 @@ JH\> 남을 판단하는 질문 자제. 그 의견을 가지는 이유는 뭘까
 -   Ted: 정부가 너무 책임만 지다 보면, 사람이 살아갈 동기를 잃는다.
 
     -   강가에서 젤 편해.
+
+---
+title: "1129"
+---
+
+## Lesson 5 : Navigating Conflict
+
+### 100% Elephant 
+
+-   코끼리(감정)이 날뛰는 패닉존에 있을 땐, 코끼리를 스트레치존으로 데려가야 한다.
+
+### Detect - Pause - Redirect
+
+![](images/image-2101950546.png){width="337"}
+
+-   패닉 상태임을 인지해라.
+
+-   일단 잠깐 멈춰라!
+
+-   패닉존에서 벗어날 길을 찾아보자.
+
+### 1. Detect 
+
+-   Physical Sign: 얼굴 후끈, 덥거나 춥고, 손발이 차가워진다면?
+
+-   Thoughts: 난 바보야 ... 난 끝났어 ... 생각이 든다면?
+
+-   Emotions: 불안, 좌절, 죄책감이 든다면?
+
+-   Behaviors: Fight(공격, 비난), Flight(회피), Freeze(조용히) 한다면?
+
+### 2. Pause
+
+-   일단 잠깐 멈추고, 심호흡 !!!!!! (1, 2, 3)
+
+-   너의 감각을 사용해서 현재의 상황을 둘러봐.
+
+-   주변에 대한 판단 대신, 너의 현 상황에 집중해봐.
+
+-   너 스스로와 긍정적인 대화를 해봐. 넌 할 수 있어, 잘했어 등.
+
+### Take a break
+
+-   패닉 존에 있다면, 멈추고 !! (하루정도) 다시 얘기해 ..
+
+    ### Summary 
+
+    ![](images/image-1537011643.png){width="471"}
