--- a/1115.qmd
+++ b/1115.qmd
@@ -1,3 +1,47 @@
 ---
-title: "1115"
+title: "1129"
 ---
+
+## Lesson 5 : Navigating Conflict
+
+### 100% Elephant 
+
+-   코끼리(감정)이 날뛰는 패닉존에 있을 땐, 코끼리를 스트레치존으로 데려가야 한다.
+
+### Detect - Pause - Redirect
+
+![](images/image-2101950546.png){width="337"}
+
+-   패닉 상태임을 인지해라.
+
+-   일단 잠깐 멈춰라!
+
+-   패닉존에서 벗어날 길을 찾아보자.
+
+### 1. Detect 
+
+-   Physical Sign: 얼굴 후끈, 덥거나 춥고, 손발이 차가워진다면?
+
+-   Thoughts: 난 바보야 ... 난 끝났어 ... 생각이 든다면?
+
+-   Emotions: 불안, 좌절, 죄책감이 든다면?
+
+-   Behaviors: Fight(공격, 비난), Flight(회피), Freeze(조용히) 한다면?
+
+### 2. Pause
+
+-   일단 잠깐 멈추고, 심호흡 !!!!!! (1, 2, 3)
+
+-   너의 감각을 사용해서 현재의 상황을 둘러봐.
+
+-   주변에 대한 판단 대신, 너의 현 상황에 집중해봐.
+
+-   너 스스로와 긍정적인 대화를 해봐. 넌 할 수 있어, 잘했어 등.
+
+### Take a break
+
+-   패닉 존에 있다면, 멈추고 !! (하루정도) 다시 얘기해 ..
+
+    ### Summary 
+
+    ![](images/image-1537011643.png){width="471"}
