--- a/summary.qmd
+++ b/summary.qmd
@@ -1,7 +1,160 @@
-# Summary
+# Lesson 3 \~ 5
 
-In summary, this book has no content whatsoever.
+## Lesson 3: Get Curious
 
-```{r}
-1 + 1
-```
+-   탐험가적 마음가짐을 통해 논쟁을 이해하고 상호작용할 수 있음!
+
+### Warrior Mindset
+
+-   내 말이 맞다고 생각해, 싸움꾼의 마인드로 이기고 지고 밖에 없음. 이기는 것만 있고 듣는 것은 하지 않음.
+
+### Warriors Lose
+
+-   이기려 하는 것? 멍청한거다!
+    -   이기는 것이 기분은 좋겠지만, 싸움꾼 마인드로 대화하면 상대는 위협받고 모욕적인 기분을 느껴 방어 기제를 펼칠 것임. 그리고 그 사람과의 관계는 손상되는 것. 논쟁에서 이기는 것은 많은 것을 잃게 만든다.
+    -   그런데도 우리는 왜 싸움꾼의 마인드로 대화하나?
+
+### Being Wrong
+
+-   우리가 틀렸다는 것이 싫어. 우린 종종 틀리는데, 우리가 인지를 못하는 것임.
+
+### The Illusion of Explanatory Depth
+
+-   아마 대부분 사람이 대략적으로 알고 있지 세세하게 알고 있지 않음.
+
+### Embracing Not Knowing 내가 잘 모르고 있음을 받아들여라
+
+-   실제로 잘 알진 못하지만, 쟁점에 대해 강한 느낌이 있음... ㅇㅇ! 당연하지! 알고 있음! 근데 설명해바! 하면 음 ,, 먼가 표현은 못 하겠는데.. 이런 맥락.
+
+### Intellectual Humility
+
+-   내가 알고 있는 게 한정적이고 내가 틀림을 인정하는 것
+
+    = 지적겸손.
+
+-   우리가 틀린 것을 받아들이는 것이 삶의 일부이며 타인의 비판을 받아들일 줄 알아야함. 틀렸다는 것은 성장의 기회.
+
+### Intellectual Humilityd의 이점
+
+-   연인 관계, 친구 관계, 가족 관계 만족도 높아짐
+-   어려운 갈등을 헤쳐나가고
+-   더 행복해질 수 있다!
+
+### Belief Updating
+
+-   흑백논리에 있지만, 그 중간에 있을 순 없을까?
+    -   내가 전부 다 틀린게 아니라, 내 확신을 새로운 사실 혹은 근거에 의해 확신도를 떨어트린다면 !
+-   Belief Updating = 생각을 / 신념을 업데이트!
+
+### Changing Your Mind
+
+-   내 신념을 업데이트 할 수 있는 마음가짐을 가지고 있는 것이 중요함.
+-   탐험가의 마음가짐이 필요. '열린 마음'
+
+### Explorer Mind
+
+-   Curious: 호기심을 가져라.
+    -   무조건적인 반박 X. 니가 왜 그런 생각을 하는지 궁금해. 왜 그 사람들은 늘 그렇게 느끼는걸까?
+-   Good Q: 좋은 질문을 해라
+    -   남을 판단하고 공격하는 질문은 하지 마라! 넌 잘 몰라 이런 뉘앙스. 조언식의 질문.
+
+### Constructive Questions
+
+-   **Are Genuinely Curious: 니가 정말 궁금해하는 거냐**
+    -   진정 궁금한거냐? 알고싶어하는 진실된 마음.
+        -   니가 그 말 했잖아. 그 말이 무슨 의민지 나한테 좀 더 얘기해줄래?
+-   **Are open-ended: 열린 질문**
+    -   간단하게 예스/노로 대답 가능한 질문 말고! 왜 그런거야? 어떻게 그렇게 된거야? 같은 열린 질문을 해라
+-   **Invite complexity: 복잡한 내용을 준비해라**
+    -   중간지점인 흑백지역(복잡한 지점)을 나눠라.
+        -   넌 늘 이런식으로 느꼈니? 널 헷갈리게 하는 요소는 없을까?
+-   **Invite stories: 이야기를 끌어내라**
+    -   사실과 숫자에 대한 이야기 대신 그 사람에 관한 이야기를 해라.
+        -   널 그렇게 믿도록 한 너의 삶에 대해 얘기해줄래? 왜 그런 믿음을 가지게 된거야? 스토리를 공유하게끔.
+-   **Use a curious tone: 궁금증의 톤을 갖고 있어라.**
+    -   판단하고 비난하는 듯한 톤이 들어가지 않도록 유의. 호기심 가지는 톤!
+
+### Life Hack
+
+Try using the questions below to guide you:
+
+-   Why is this issue important to you?
+    -   이게 너한테 왜 중요해?
+-   Can you tell me more?
+    -   더 자세히 말해줄랭
+-   Can you share more about what you mean when you say
+    -   니가 말한거 뭔 뜻인지 좀 더 말해줘
+-   Why do you think that is?
+    -   왜 그렇게 생각하는거야?
+-   Can you share something about your experience that may have led you to believe ?
+    -   이런 생각을 가지게 된 니 경험을 말해줘
+-   Is there anything about where you feel conflicted or pulled in two different directions?
+    -   복잡하다거나 방향성이 안 맞는 경우는 없었을까? (모순점, 충돌점)
+-   What is at stake for you or someone you know about this issue?
+    -   이 쟁점에 관련된 이해관계는 없니?
+-   Why do you think you care so deeply about this issue?
+    -   이 쟁점에 깊이 관여한 이유는 뭐야?
+-   Have you always felt that way?
+    -   넌 늘 그렇게 생각하는거야?
+
+JH\> 남을 판단하는 질문 자제. 그 의견을 가지는 이유는 뭘까? 물어봐야지
+
+## Lesson 4: Storytelling
+
+### Stories Matter
+
+-   이야기는 우리의 삶에서 정말 큰 부분을 차지함. 이야기를 통해 삶을 해결해나가는.
+-   어떻게 이야기를 통해 공감을 이끌어내 사람의 마음을 바꿀 수 있는지?
+
+### When Reasoning Backfires
+
+-   논리를 갖다대면, 기수는 더 방어적이게 됨.
+
+### The power of Stories
+
+-   감정과 직관에 호소해야 함. \> 가장 좋은 방법은? 스토리텔링.
+-   사건에 대한 맥락을 제시함.
+-   너 틀렸다고 말하지 않아도, 내 의사를 전달할 수 있게 해줌.
+
+### Our Beliefs
+
+**\< Purple: America, We Need to Talk \>**
+
+-   Karen: 정부의 도움도 좋지만, 세대간의 관계를 형성하는 것도 필요하다. ex) 지역 커뮤니티 등 Strong Families = Safety
+    -   우리 모두는 사회에서 어떤 역할을 수행하고 있다,
+-   Akram: 사회 안전망이 필요하다. 개인 뿐만이 아니라 사회 전체를 위해.
+    -   어렸을 때 이민을 와서 아이들 사이에 낄 수도 없었음. 그냥 학교 끝나고 사람 구경하러 다니고 .. 그랬음.
+-   AJ: 사람들의 기본적인 욕구를 충족할 필요가 있다.
+    -   가난해본 적이 있었음 .... 상당히 어렵게 자라옴.
+-   Ted: 정부가 너무 책임만 지다 보면, 사람이 살아갈 동기를 잃는다.
+    -   강가에서 젤 편해.
+
+## Lesson 5 : Navigating Conflict
+
+### 100% Elephant
+
+-   코끼리(감정)이 날뛰는 패닉존에 있을 땐, 코끼리를 스트레치존으로 데려가야 한다.
+
+### Detect - Pause - Redirect
+
+-   패닉 상태임을 인지해라.
+-   일단 잠깐 멈춰라!
+-   패닉존에서 벗어날 길을 찾아보자.
+
+### 1. Detect
+
+-   Physical Sign: 얼굴 후끈, 덥거나 춥고, 손발이 차가워진다면?
+-   Thoughts: 난 바보야 ... 난 끝났어 ... 생각이 든다면?
+-   Emotions: 불안, 좌절, 죄책감이 든다면?
+-   Behaviors: Fight(공격, 비난), Flight(회피), Freeze(조용히) 한다면?
+
+### 2. Pause
+
+-   일단 잠깐 멈추고, 심호흡 !!!!!! (1, 2, 3)
+-   너의 감각을 사용해서 현재의 상황을 둘러봐.
+-   주변에 대한 판단 대신, 너의 현 상황에 집중해봐.
+-   너 스스로와 긍정적인 대화를 해봐. 넌 할 수 있어, 잘했어 등.
+
+### 3. Take a break
+
+-   패닉 존에 있다면, 멈추고 !! (하루정도) 다시 얘기해 ..
