--- a/summary.qmd
+++ b/summary.qmd
@@ -159,8 +159,9 @@ JH\> 남을 판단하는 질문 자제. 그 의견을 가지는 이유는 뭘까
 
 -   패닉 존에 있다면, 멈추고 !! (하루정도) 다시 얘기해 ..
 
-강의를 통해 생각해볼 수 있었던 점 
+### 강의를 통해 생각해볼 수 있었던 점 
 1. 나는 누군가의 말을 들을 때, 싸움꾼의 마인드를 가지고 있진 않았나? 
 2. 어떠한 문제를 가지고 대화를 할 때엔, 그 사람을 판단하려기 보다는 경험을 바탕으로 이해하고자 해야겠다. 
 3. 코끼리와 기수로 감정/의식을 분류해놓은 것이 인상적이었다. 나는 감정이 우선시되는 사람인가? 생각해보게 되었다. 
 4. 내가 여태껏 대화할 때 느꼈던 답답함 혹은 말이 안 통한다 라는 감정들이 다 근거가 있던 것임을 알게 되었다. 
+5. 전반적인 수업을 통해, 해결을 지향하는 소통이 무엇인지 체득할 수 있었다. 
